log/build_2024-08-27_15-11-15/ur3/stderr.log
  File "/home/saba/workspaces/ramen_robot_ws/install/ur3/lib/python3.10/site-packages/ur3/ur3_negi_node.py", line 92
    else if self.posN ==1:
         ^^
SyntaxError: expected ':'

